Added the initial layout for the video output windows Added preferences which are currently saved when the application is closed and loaded when the application is opened

--- a/DvrViewer/DvrViewer.csproj
+++ b/DvrViewer/DvrViewer.csproj
@@ -88,11 +88,15 @@
     <Compile Include="Data\ChannelInformation.cs" />
     <Compile Include="Data\DeviceInformation.cs" />
     <Compile Include="Data\NetworkInformation.cs" />
+    <Compile Include="Data\Preferences.cs" />
     <Compile Include="DvrPrompt.xaml.cs">
       <DependentUpon>DvrPrompt.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Enum\ViewLayoutTypes.cs" />
     <Compile Include="HCNetSDK.cs" />
     <Compile Include="Shared\Base64.cs" />
+    <Compile Include="Shared\CheckedItem.cs" />
+    <Compile Include="Shared\Extensions.cs" />
     <Compile Include="Shared\Item.cs" />
     <Compile Include="Shared\PasswordBoxAssistant.cs" />
     <Compile Include="Shared\Device.cs" />
